# simple_shell

./: CMakeLists.txt  README.md  Replace_string.c  _atoi_.c  _putChar.c  a.out  add_node.c  add_node_end.c  atoi.c  build_history_list.c  builtin.c  builtin0.c  builtin1.c  checkChain.c  clear_info.c  convert_number.c  delete_node_at_index.c  dupChar.c  environ.c  environment.c  eputchar.c  eputs.c  erratoi.c  errors.c  errors0.c  errors1.c  exits.c  findPath.c  find_builtIn.c  find_cmd.c  fork_cmd.c  freeMem.c  free_info.c  free_list.c  getLine.c  get_environ.c  get_history_file.c  get_input.c  getenv.c  getenviroment.c  (+67 more)
