cmake_minimum_required(VERSION 3.25)
project(simple_shell C)

set(CMAKE_C_STANDARD 11)

include_directories(.)

add_executable(simple_shell
        _putChar.c
        add_node.c
        add_node_end.c
        atoi.c
        build_history_list.c
        checkChain.c
        clear_info.c
        convert_number.c
        delete_node_at_index.c
        dupChar.c
        eputchar.c
        eputs.c
        erratoi.c
        find_builtIn.c
        find_cmd.c
        findPath.c
        fork_cmd.c
        free_info.c
        free_list.c
        freeMem.c
        get_environ.c
        get_history_file.c
        get_input.c
        getenv.c
        getLine.c
        input_buf.c
        interactive.c
        is_chain.c
        is_delim.c
        kenizer2.c
        kernizer1.c
        listLen.c
        listNext.c
        listStartWith.c
        listToString.c
        main.c
        memory.c
        memset.c
        myalias.c
        mycd.c
        myenv.c
        myexit.c
        myhelp.c
        myhistory.c
        mysetenv.c
        myunsetenv.c
        parser.c
        populate_env_list.c
        print_alias.c
        print_d.c
        print_error.c
        print_list_str.c
        printList.c
        putchar.c
        putfd.c
        putsfd.c
        read_buf.c
        read_history.c
        realloc.c
        remove_comments.c
        renumber_history.c
        replace_alis.c
        Replace_string.c
        replace_vars.c
        set_alias.c
        set_info.c
        setenv.c
        shell.h
        shell_loop.c
        sigintHandler.c
        strchr.c
        strConcat.c
        strDup.c
        stringCmp.c
        stringCopy.c
        stringLen.c
        stringStartWith.c
        strncat.c
        strncpy.c
        unset_alias.c
        unsetenv.c
        write_history.c)
